# microblog

./: 1.microblog.js  Cargo.toml  LICENSE  README.md  index.html  microblog.js  microblog.wasm  package.json  webpack.config.js
css/: index.css
src/: app.rs  lib.rs
static/: index.html
